# adaptivf

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: BASELINES.md  FINDINGS.md  MANUSCRIPT_REVIEW.md  MEASUREMENTS.md  NEXT_DIRECTIONS.md  appendix.tex  paper_exports_appendix_template.tex
paper_exports/: README.md  ablation_plan.json  appendix.tex  appendix_ablation_recall_vs_index_overhead_facets.csv  appendix_init_recall_vs_avg_computations_facets.csv  appendix_recall_compute_storage_triangle_facets.csv  appendix_serving_ram_bars.csv  appendix_serving_ram_vs_index_overhead_facets.csv  competitiveness_plan.json  initialization_plan.json  main_load_balance_bucket_rank_facets.csv  main_qps_vs_index_overhead_facets.csv  main_recall_compute_storage_triangle_aggregate.csv  main_training_time_bars.csv  plots_manifest.json  run_plan.json  serving_ram.csv  serving_ram.json  study_manifest.json  tables_manifest.json
paper_exports/ablations/: all_datasets_summary.csv  all_datasets_summary.json  deep1m_summary.csv  (+7 more)
scripts/: README.md  download_datasets.sh  measure_serving_ram.py  rerun_adaptivf_patch.sh  run_paper.sh  smoke_glove10k.sh  test.sh
src/: adaptivf.py  ann_ops.py  artifacts.py  cli_clean_artifacts.py  cli_run_competitiveness.py  cli_run_faiss_baselines.py  cli_run_plan.py  cli_run_router_methods.py  collect.py  console.py  datasets.py  export_bundle.py  index_manifest.py  measurement_contract.py  metrics.py  plots.py  pq.py  presets.py  run_faiss_query_isolated.py  run_lira_query_isolated.py  run_router_query_isolated.py  tables.py
tests/: helpers.py
(+40 files in other folders)
